# Dominfo

./: .release.config.cjs  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml
dominfo/: __main__.py  client.py
